-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17, 21
-
Component/s: hotspot
-
b03
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8310443 | 21.0.1 | David Holmes | P3 | Resolved | Fixed | b02 |
| JDK-8310368 | 21 | David Holmes | P3 | Resolved | Fixed | b28 |
| JDK-8314971 | 17.0.10-oracle | Calvin Cheung | P3 | Resolved | Fixed | b01 |
| JDK-8310463 | 17.0.9 | Aleksey Shipilev | P3 | Resolved | Fixed | b01 |
* This code is distributed in the hope that it will be useful, but WITHOUT
* ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
* FITNESS FOR A PARTICULAR PURPOSE.
It has been raised as a source of concern that the EXPERIMENTAL comment in hotspot/share/runtime/globals.hpp from lines 70-80 may be used to create confusion for customers of commercial distributions based upon this source code.
THEREFORE, the suggestion is to change the comments thusly:
// EXPERIMENTAL flags are in support of features that may not be
// an officially supported part of a product, but may be available
// for experimenting with. They could, for example, be performance
// features that may not have undergone full or rigorous QA, but which may
// help performance in some cases and released for experimentation
// by the community of users and developers.
// This flag also allows one to
// be able to build a fully supported product that nonetheless also
// ships with some unsupported, lightly tested, experimental features.
// Refer to the documentation of any products using this code for details on support and fitness for production.
// Like the UnlockDiagnosticVMOptions flag above, there is a corresponding
// UnlockExperimentalVMOptions flag, which allows the control and
// modification of the experimental flags.
- backported by
-
JDK-8310368 Clarify EXPERIMENTAL flags comment in hotspot/share/runtime/globals.hpp
-
- Resolved
-
-
JDK-8310443 Clarify EXPERIMENTAL flags comment in hotspot/share/runtime/globals.hpp
-
- Resolved
-
-
JDK-8310463 Clarify EXPERIMENTAL flags comment in hotspot/share/runtime/globals.hpp
-
- Resolved
-
-
JDK-8314971 Clarify EXPERIMENTAL flags comment in hotspot/share/runtime/globals.hpp
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/3773e0bd
-
Commit
openjdk/jdk21/fb6f5f1b
-
Commit
openjdk/jdk/96a7db7b
-
Review
openjdk/jdk17u-dev/1473
-
Review
openjdk/jdk21/35
-
Review
openjdk/jdk/14550