8309228: Clarify EXPERIMENTAL flags comment in hotspot/share/runtime/globals.hpp

Backport-of: 96a7db7b3cd5e1370df195a910b94eaece6c3d3c